@@ -407,11 +407,20 @@ block|}
 comment|// get Analyzer from superclass and tokenize the term
 name|TokenStream
 name|source
+decl_stmt|;
+name|int
+name|countTokens
 init|=
+literal|0
+decl_stmt|;
+try|try
+block|{
+name|source
+operator|=
 name|getAnalyzer
 argument_list|()
 operator|.
-name|tokenStream
+name|reusableTokenStream
 argument_list|(
 name|field
 argument_list|,
@@ -421,26 +430,7 @@ argument_list|(
 name|termStr
 argument_list|)
 argument_list|)
-decl_stmt|;
-name|CharTermAttribute
-name|termAtt
-init|=
-name|source
-operator|.
-name|addAttribute
-argument_list|(
-name|CharTermAttribute
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
-name|int
-name|countTokens
-init|=
-literal|0
-decl_stmt|;
-try|try
-block|{
+expr_stmt|;
 name|source
 operator|.
 name|reset
@@ -461,6 +451,18 @@ name|e1
 argument_list|)
 throw|;
 block|}
+name|CharTermAttribute
+name|termAtt
+init|=
+name|source
+operator|.
+name|addAttribute
+argument_list|(
+name|CharTermAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 while|while
 condition|(
 literal|true
@@ -761,20 +763,6 @@ block|{
 comment|// get Analyzer from superclass and tokenize the term
 name|TokenStream
 name|source
-init|=
-name|getAnalyzer
-argument_list|()
-operator|.
-name|tokenStream
-argument_list|(
-name|field
-argument_list|,
-operator|new
-name|StringReader
-argument_list|(
-name|termStr
-argument_list|)
-argument_list|)
 decl_stmt|;
 name|List
 argument_list|<
@@ -789,20 +777,24 @@ name|String
 argument_list|>
 argument_list|()
 decl_stmt|;
-name|CharTermAttribute
-name|termAtt
-init|=
-name|source
-operator|.
-name|addAttribute
-argument_list|(
-name|CharTermAttribute
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
 try|try
 block|{
+name|source
+operator|=
+name|getAnalyzer
+argument_list|()
+operator|.
+name|reusableTokenStream
+argument_list|(
+name|field
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+name|termStr
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|source
 operator|.
 name|reset
@@ -823,6 +815,18 @@ name|e1
 argument_list|)
 throw|;
 block|}
+name|CharTermAttribute
+name|termAtt
+init|=
+name|source
+operator|.
+name|addAttribute
+argument_list|(
+name|CharTermAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 while|while
 condition|(
 literal|true
@@ -961,31 +965,7 @@ comment|// get Analyzer from superclass and tokenize the term
 name|TokenStream
 name|source
 init|=
-name|getAnalyzer
-argument_list|()
-operator|.
-name|tokenStream
-argument_list|(
-name|field
-argument_list|,
-operator|new
-name|StringReader
-argument_list|(
-name|termStr
-argument_list|)
-argument_list|)
-decl_stmt|;
-name|CharTermAttribute
-name|termAtt
-init|=
-name|source
-operator|.
-name|addAttribute
-argument_list|(
-name|CharTermAttribute
-operator|.
-name|class
-argument_list|)
+literal|null
 decl_stmt|;
 name|String
 name|nextToken
@@ -999,6 +979,34 @@ literal|false
 decl_stmt|;
 try|try
 block|{
+name|source
+operator|=
+name|getAnalyzer
+argument_list|()
+operator|.
+name|reusableTokenStream
+argument_list|(
+name|field
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+name|termStr
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|CharTermAttribute
+name|termAtt
+init|=
+name|source
+operator|.
+name|addAttribute
+argument_list|(
+name|CharTermAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 name|source
 operator|.
 name|reset
@@ -1159,7 +1167,7 @@ operator|=
 name|getAnalyzer
 argument_list|()
 operator|.
-name|tokenStream
+name|reusableTokenStream
 argument_list|(
 name|field
 argument_list|,
@@ -1272,13 +1280,15 @@ operator|!=
 literal|null
 condition|)
 block|{
+try|try
+block|{
 comment|// part2
 name|source
 operator|=
 name|getAnalyzer
 argument_list|()
 operator|.
-name|tokenStream
+name|reusableTokenStream
 argument_list|(
 name|field
 argument_list|,
@@ -1300,8 +1310,6 @@ operator|.
 name|class
 argument_list|)
 expr_stmt|;
-try|try
-block|{
 name|source
 operator|.
 name|reset
